--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@capacitor/android": "^1.0.0-beta.17",
     "@capacitor/cli": "1.0.0-beta.17",
     "@capacitor/core": "1.0.0-beta.17",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/header-color": "^4.20.0",
     "@ionic-native/http": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
